# esp_GT_measure_detect

UCI CBM Dataset/: data_convert.py  naval_propulsion_dataset.csv
file_serving/: .gitignore  README.md  sdkconfig  sdkconfig.old
file_serving/components/compressor/: CMakeLists.txt  compressor_wrapper.cpp
file_serving/components/compressor/include/: compressor_wrapper.h
file_serving/components/compressor/model-parameters/: model_metadata.h  model_variables.h
file_serving/components/compressor/tflite-model/: tflite_learn_840750_11_compiled.cpp  tflite_learn_840750_11_compiled.h
file_serving/components/edge_impulse_core/: CMakeLists.txt
file_serving/components/edge_impulse_core/edge-impulse-sdk/classifier/: ei_data_normalization.h  ei_print_results.h  ei_run_classifier.h
file_serving/components/edge_impulse_core/edge-impulse-sdk/classifier/inferencing_engines/: tflite_eon.h  tflite_helper.h
file_serving/components/edge_impulse_core/edge-impulse-sdk/classifier/postprocessing/: ei_postprocessing.h  ei_postprocessing_common.h
file_serving/components/edge_impulse_core/edge-impulse-sdk/dsp/: ei_flatten.h
file_serving/components/edge_impulse_core/edge-impulse-sdk/dsp/spectral/: processing.hpp
file_serving/components/edge_impulse_core/edge-impulse-sdk/porting/: ei_classifier_porting.h
file_serving/components/turbine/: CMakeLists.txt  turbine_wrapper.cpp
file_serving/components/turbine/include/: turbine_wrapper.h
file_serving/components/turbine/model-parameters/: model_metadata.h  model_variables.h
file_serving/main/: CMakeLists.txt  buzzer.c  buzzer.h  file_server.c  file_serving_example_common.h  main.c  ssd1306.c  ssd1306.h  upload_script.html
model/compressor/: README.txt
model/compressor/model-parameters/: model_variables.h
model/turbine/: README.txt
model/turbine/model-parameters/: model_variables.h
model/turbine/tflite-model/: tflite_learn_840978_3_compiled.cpp  tflite_learn_840978_3_compiled.h
